implementation for booking apis
